--- a/app/views/admin/business_calculators/_add_field.html.erb
+++ b/app/views/admin/business_calculators/_add_field.html.erb
@@ -9,7 +9,7 @@
 
   <div data-target="add-nested-fields.destination"></div>
 
-  <button type="button" class="btn btn-default" data-action="add-nested-fields#cloneToDestinationWithSecondNumberIncremented">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add field
+  <button type="button" class="button" data-action="add-nested-fields#cloneToDestinationWithSecondNumberIncremented">
+    <i class="fas fa-plus" aria-hidden="true"></i> Add field
   </button>
 </div>  
