--- a/app/views/admin/data_reporters/index.html.erb
+++ b/app/views/admin/data_reporters/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Data Reporters</h1>
+<h1 class="heading-lg">Data Reporters</h1>
 
 <table class="table">
   <thead>
@@ -19,7 +19,7 @@
         <td><%= data_reporter.email %></td>
         <td><%= link_to report.title, [:admin, report]%></td>
         <td><%= time_tag(data_reporter.created_at, format: '%F %R') %></td>
-        <td class="admin-actions">
+        <td class="whitespace-nowrap">
           <%= link_to 'Show', [:admin, data_reporter] %> &nbsp;
           <%= link_to 'Edit', edit_admin_data_reporter_path(data_reporter) %> &nbsp;
           <%= link_to 'Destroy', [:admin, data_reporter], method: :delete, data: { confirm: 'Are you sure?' } %>
