--- a/app/views/admin/data_reporters/new.html.erb
+++ b/app/views/admin/data_reporters/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Data Reporter for <%= @report_area&.title %></h1>
+<h1 class="heading-lg">New Data Reporter for <%= @report_area&.title %></h1>
 <h3>Report <%= @report.title %></h3>
 
 <%= render 'form', reporter: @reporter %>
