--- a/app/views/admin/data_requests/show.html.erb
+++ b/app/views/admin/data_requests/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Data request</h1>
+<h1 class="heading-lg">Data request</h1>
 
 <dl class="dl-horizontal">
   <dt>Email:</dt>
@@ -12,5 +12,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_data_request_path(@data_request), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_data_requests_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_data_request_path(@data_request), class: 'button' %>
+<%= link_to 'Back', admin_data_requests_path, class: 'link' %>
