--- a/app/views/admin/invoice_certificates/send_email.html.erb
+++ b/app/views/admin/invoice_certificates/send_email.html.erb
@@ -1,1 +1,1 @@
-<h1>Certifikat skickat med mail till: <%= @invoice.certificate_reciever_email %> på <%= @pdf.receiver %>!</h1>
+<h1 class="heading-lg">Certifikat skickat med mail till: <%= @invoice.certificate_reciever_email %> på <%= @pdf.receiver %>!</h1>
