--- a/app/views/admin/api_keys/index.html.erb
+++ b/app/views/admin/api_keys/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>API Keys</h1>
+<h1 class="heading-lg">API Keys</h1>
 
 <table class="table">
   <thead>
@@ -20,10 +20,10 @@
         <td><%= api_key.name %></td>
         <td><%= api_key.contact_name %></td>
         <td><%= api_key.contact_email %></td>
-        <td class="admin-actions">
-          <%= link_to 'Show', [:admin, api_key] %> &nbsp;
-          <%= link_to 'Edit', edit_admin_api_key_path(api_key) %> &nbsp;
-          <%= link_to 'Destroy', [:admin, api_key], method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td class="whitespace-nowrap">
+          <%= link_to 'Show', [:admin, api_key], class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Edit', edit_admin_api_key_path(api_key), class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Destroy', [:admin, api_key], method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-ui text-green-shade-2' %>
         </td>
       </tr>
     <% end %>
@@ -32,4 +32,4 @@
 
 <hr>
 
-<%= link_to 'New API Key', new_admin_api_key_path, class: 'btn btn-default' %>
+<%= link_to 'New API Key', new_admin_api_key_path, class: 'button' %>
