--- a/app/views/admin/api_keys/show.html.erb
+++ b/app/views/admin/api_keys/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>API Key</h1>
+<h1 class="heading-lg">API Key</h1>
 
 <dl class="dl-horizontal">
   <dt>Created:</dt>
@@ -24,5 +24,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_api_key_path(@api_key), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_api_keys_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_api_key_path(@api_key), class: 'button' %>
+<%= link_to 'Back', admin_api_keys_path, class: 'link' %>
