--- a/app/views/admin/business_calculators/index.html.erb
+++ b/app/views/admin/business_calculators/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Business calculators</h1>
+<h1 class="heading-lg">Business calculators</h1>
 
 <table class="table">
   <thead>
@@ -18,20 +18,20 @@
         <td><%= calculator.name %></td>
         <td><%= calculator.status %></td>
         <td><%= time_tag(calculator.updated_at, format: '%F %R') %></td>
-        <td class="admin-actions">
-          <%= link_to 'Show', [:admin, calculator] %> &nbsp;
+        <td class="whitespace-nowrap">
+          <%= link_to 'Show', [:admin, calculator], class: 'link-ui text-green-shade-2' %> &nbsp;
           <% if calculator.draft? %>
-            <%= link_to 'Edit', edit_admin_business_calculator_path(calculator) %>
+            <%= link_to 'Edit', edit_admin_business_calculator_path(calculator), class: 'link-ui text-green-shade-2' %>
           <% else %>
             <span style="color: gray; cursor: not-allowed;">Edit</span>
           <% end %> &nbsp;
-          <%= link_to 'Preview form', preview_reported_data_path(calculator.id), target: :_blank %> &nbsp;
-          <%= link_to 'Duplicate', duplicate_admin_business_calculator_path(calculator), method: :post %> &nbsp;
+          <%= link_to 'Preview form', preview_reported_data_path(calculator.id), target: :_blank, class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Duplicate', duplicate_admin_business_calculator_path(calculator), method: :post, class: 'link-ui text-green-shade-2' %> &nbsp;
           <% unless calculator.archived? %>
-            <%= link_to 'Archive', archive_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit or use this calculator.' } %> &nbsp;
+            <%= link_to 'Archive', archive_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit or use this calculator.' }, class: 'link-ui text-green-shade-2' %> &nbsp;
           <% end %>
           <% if calculator.draft? %>
-            <%= link_to 'Publish', publish_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit this calculator.' } %> &nbsp;
+            <%= link_to 'Publish', publish_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit this calculator.' }, class: 'link-ui text-green-shade-2' %> &nbsp;
           <% end %>
         </td>
       </tr>
@@ -41,4 +41,4 @@
 
 <hr>
 
-<%= link_to 'New Business Calculator', new_admin_business_calculator_path, class: 'btn btn-default' %>
+<%= link_to 'New Business Calculator', new_admin_business_calculator_path, class: 'button' %>
