--- a/app/views/admin/business_calculators/new.html.erb
+++ b/app/views/admin/business_calculators/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Business Calculator</h1>
+<h1 class="heading-lg">New Business Calculator</h1>
 
 <%= render 'form', calculator: @calculator %>
 
