--- a/app/views/admin/climate_reports/edit.html.erb
+++ b/app/views/admin/climate_reports/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Editing Climate Report</h1>
+<h1 class="heading-lg">Editing Climate Report</h1>
 
 <%= render 'form', climate_report: @report %>
 
 <hr>
 
-<%= link_to 'Show', [:admin, @report], class: 'btn btn-default' %>
-<%= link_to 'Back', admin_climate_reports_path, class: 'btn btn-link' %>
+<%= link_to 'Show', [:admin, @report], class: 'button' %>
+<%= link_to 'Back', admin_climate_reports_path, class: 'link' %>
