--- a/app/views/admin/data_reporters/show.html.erb
+++ b/app/views/admin/data_reporters/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Data reporter</h1>
+<h1 class="heading-lg">Data reporter</h1>
 
 <dl class="dl-horizontal">
   <dt>Id:</dt>
@@ -28,5 +28,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_data_reporter_path(@data_reporter), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_data_reporters_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_data_reporter_path(@data_reporter), class: 'button' %>
+<%= link_to 'Back', admin_data_reporters_path, class: 'link' %>
