--- a/app/views/admin/flight_batch/new.html.erb
+++ b/app/views/admin/flight_batch/new.html.erb
@@ -1,12 +1,20 @@
-<h1>Upload csv-file for batch flight calculations</h1>
+<div class="space-y-6">
+  <h1 class="heading-lg">Upload csv-file for batch flight calculations</h1>
 
-<p>- please use file saved as 'CSV UTF-8' in excel or similar (encoding must be UTF-8)</p>
-<p>- first column in file should be origin</p>
-<p>- second column in file should be destination</p>
-<p>- origin/destination can be anything that can be entered in <%= link_to 'our public flight search', new_flight_footprint_path %>. Airportcode will give perfect match, city will work most of the times. This tool will show you all the airports found after the calculation, so that you can check that correct matches was found.</p>
+  <ul class="list-bullet">
+    <li>please use file saved as 'CSV UTF-8' in excel or similar (encoding must be UTF-8)</li>
+    <li>first column in file should be origin</li>
+    <li>second column in file should be destination</li>
+    <li>origin/destination can be anything that can be entered in <%= link_to 'our public flight search', new_flight_footprint_path %>. Airportcode will give perfect match, city will work most of the times. This tool will show you all the airports found after the calculation, so that you can check that correct matches was found.</li>
+  </ul>
 
-<%= form_with url: "/admin/flight_batch", method: :post do |form| %>
-  <%= form.label :query, "CSV file  :" %>
-  <%= form.file_field :csv %>
-  <%= form.submit "Calculate" %>
-<% end %>
+  <%= form_with url: "/admin/flight_batch", method: :post do |form| %>
+    <div class='callout inline-block space-y-3'>
+      <%= form.label :query, "CSV file:", class: 'block font-bold' %>
+      <%= form.file_field :csv  %>
+    <div>
+      <%= form.submit "Calculate", class: 'button' %>
+    </div>
+    </div>
+  <% end %>
+</div>
