--- a/app/views/admin/flight_offsets/show.html.erb
+++ b/app/views/admin/flight_offsets/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Flight offset</h1>
+<h1 class="heading-lg">Flight offset</h1>
 
 <dl class="dl-horizontal">
   <dt>Created:</dt>
@@ -24,4 +24,4 @@
 
 <hr>
 
-<%= link_to 'Back', admin_flight_offsets_path, class: 'btn btn-link' %>
+<%= link_to 'Back', admin_flight_offsets_path, class: 'link' %>
