--- a/app/views/admin/invoices/edit.html.erb
+++ b/app/views/admin/invoices/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Editing Invoice</h1>
+<h1 class="heading-lg">Editing Invoice</h1>
 
 <%= render 'form', invoice: @invoice %>
 
 <hr>
 
-<%= link_to 'Show', [:admin, @invoice], class: 'btn btn-default' %>
-<%= link_to 'Back', admin_invoices_path, class: 'btn btn-link' %>
+<%= link_to 'Show', [:admin, @invoice], class: 'button' %>
+<%= link_to 'Back', admin_invoices_path, class: 'link' %>
