--- a/app/views/admin/invoices/index.html.erb
+++ b/app/views/admin/invoices/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Invoices</h1>
+<h1 class="heading-lg">Invoices</h1>
 
 <table class="table">
   <thead>
@@ -34,12 +34,12 @@
         <td><%= number_with_delimiter(invoice.co2e, delimiter: ' ') %> kg co2e</td>
         <td><%= invoice.amount_in_sek %> SEK</td>
         <td><%= invoice.project.name if invoice.project.present? %></td>
-        <td class="admin-actions">
-          <%= link_to 'Show', [:admin, invoice] %> &nbsp;
-          <%= link_to 'Edit', edit_admin_invoice_path(invoice) %> &nbsp;
-          <%= link_to 'Destroy', [:admin, invoice], method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td class="whitespace-nowrap">
+          <%= link_to 'Show', [:admin, invoice], class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Edit', edit_admin_invoice_path(invoice), class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Destroy', [:admin, invoice], method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-ui text-green-shade-2' %>
           <% if invoice.project.present? %>
-            &nbsp; <%= link_to 'Certificate', admin_invoice_certificates_path(type: 'invoice', id: invoice.id, format: :pdf, locale: :sv) %>
+            &nbsp; <%= link_to 'Certificate', admin_invoice_certificates_path(type: 'invoice', id: invoice.id, format: :pdf, locale: :sv), class: 'link-ui text-green-shade-2' %>
           <% end %>
       </td>
       </tr>
@@ -49,4 +49,4 @@
 
 <hr>
 
-<%= link_to 'New Invoice', new_admin_invoice_path, class: 'btn btn-default' %>
+<%= link_to 'New Invoice', new_admin_invoice_path, class: 'button' %>
