--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Organizations</h1>
+<h1 class="heading-lg">Organizations</h1>
 
 <table class="table">
   <thead>
@@ -16,10 +16,10 @@
       <tr>
         <td><%= organization.name %></td>
         <td><%= time_tag(organization.updated_at, format: '%F %R') %></td>
-        <td class="admin-actions">
-          <%= link_to 'Show', [:admin, organization] %> &nbsp;
-          <%= link_to 'Edit', edit_admin_organization_path(organization) %> &nbsp;
-          <%= link_to 'Destroy', [:admin, organization], method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td class="whitespace-nowrap">
+          <%= link_to 'Show', [:admin, organization], class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Edit', edit_admin_organization_path(organization), class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Destroy', [:admin, organization], method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-ui text-green-shade-2' %>
         </td>
       </tr>
     <% end %>
@@ -28,4 +28,4 @@
 
 <hr>
 
-<%= link_to 'New Organization', new_admin_organization_path, class: 'btn btn-default' %>
+<%= link_to 'New Organization', new_admin_organization_path, class: 'button' %>
