--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Organization</h1>
+<h1 class="heading-lg">Organization</h1>
 
 <dl class="dl-horizontal">
   <dt>Name:</dt>
@@ -12,5 +12,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_organization_path(@organization), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_organizations_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_organization_path(@organization), class: 'button' %>
+<%= link_to 'Back', admin_organizations_path, class: 'link' %>
