--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Editing Project</h1>
+<h1 class="heading-lg">Editing Project</h1>
 
 <%= render 'form', project: @project %>
 
 <hr>
 
-<%= link_to 'Show', [:admin, @project], class: 'btn btn-default' %>
-<%= link_to 'Back', admin_projects_path, class: 'btn btn-link' %>
+<%= link_to 'Show', [:admin, @project], class: 'button' %>
+<%= link_to 'Back', admin_projects_path, class: 'link' %>
