--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Project</h1>
+<h1 class="heading-lg">Project</h1>
 
 <dl class="dl-horizontal">
   <dt>Name:</dt>
@@ -66,5 +66,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_project_path(@project), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_projects_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_project_path(@project), class: 'button' %>
+<%= link_to 'Back', admin_projects_path, class: 'link' %>
