--- a/app/views/admin/referral_codes/index.html.erb
+++ b/app/views/admin/referral_codes/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Referral Codes</h1>
+<h1 class="heading-lg">Referral Codes</h1>
 
 <table class="table">
   <thead>
@@ -22,10 +22,10 @@
         <td><%= link_to(referral_code.destination_path, referral_code.destination_path) %></td>
         <td><%= referral_code.referred_users_count %></td>
         <td><%= referral_code.subscription_months_total_co2e %></td>
-        <td class="admin-actions">
-          <%= link_to 'Show', [:admin, referral_code] %> &nbsp;
-          <%= link_to 'Edit', edit_admin_referral_code_path(referral_code) %> &nbsp;
-          <%= link_to 'Destroy', [:admin, referral_code], method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td class="whitespace-nowrap">
+          <%= link_to 'Show', [:admin, referral_code], class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Edit', edit_admin_referral_code_path(referral_code), class: 'link-ui text-green-shade-2' %> &nbsp;
+          <%= link_to 'Destroy', [:admin, referral_code], method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-ui text-green-shade-2' %>
         </td>
       </tr>
     <% end %>
@@ -34,4 +34,4 @@
 
 <hr>
 
-<%= link_to 'New Referral Code', new_admin_referral_code_path, class: 'btn btn-default' %>
+<%= link_to 'New Referral Code', new_admin_referral_code_path, class: 'button' %>
