--- a/app/views/admin/referral_codes/show.html.erb
+++ b/app/views/admin/referral_codes/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Referral Code</h1>
+<h1 class="heading-lg">Referral Code</h1>
 
 <dl class="dl-horizontal">
   <dt>Created:</dt>
@@ -21,5 +21,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_referral_code_path(@referral_code), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_referral_codes_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_referral_code_path(@referral_code), class: 'button' %>
+<%= link_to 'Back', admin_referral_codes_path, class: 'link' %>
