--- a/app/views/admin/reported_datas/show.html.erb
+++ b/app/views/admin/reported_datas/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Reported data</h1>
+<h1 class="heading-lg">Reported data</h1>
 
 <dl class="dl-horizontal">
   <dt>Id:</dt>
@@ -22,4 +22,4 @@
 
 <hr>
 
-<%= link_to 'Back', admin_reported_datas_path, class: 'btn btn-link' %>
+<%= link_to 'Back', admin_reported_datas_path, class: 'link' %>
