--- a/app/views/admin/units/_form.html.erb
+++ b/app/views/admin/units/_form.html.erb
@@ -11,20 +11,20 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="flex flex-col">
     <%= form.label :name %>
-    <%= form.text_field :name, class: 'form-control' %>
+    <%= form.text_field :name, class: 'input' %>
   </div>
 
-  <div class="form-group">
+  <div class="flex flex-col">
     <%= form.label :key %>
-    <%= form.text_field :key, class: 'form-control' %>
+    <%= form.text_field :key, class: 'input' %>
   </div>
 
-  <div class="form-group">
+  <div class="flex flex-col">
     <%= form.label :input_type %>
-    <%= form.select(:input_type, [['Number field', 'number'], ['Text area', 'textarea'], ['Text field', 'text']], { selected: form.object.input_type }, { class: 'form-control' }) %>
+    <%= form.select(:input_type, [['Number field', 'number'], ['Text area', 'textarea'], ['Text field', 'text']], { selected: form.object.input_type }, { class: 'input' }) %>
   </div>
 
-  <%= form.submit class: 'btn btn-primary' %>
+  <%= form.submit class: 'button button-cta' %>
 <% end %>
