--- a/app/views/admin/units/show.html.erb
+++ b/app/views/admin/units/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>Unit</h1>
+<h1 class="heading-lg">Unit</h1>
 
 <dl class="dl-horizontal">
   <dt>Name:</dt>
@@ -16,5 +16,5 @@
 
 <hr>
 
-<%= link_to 'Edit', edit_admin_unit_path(@unit), class: 'btn btn-default' %>
-<%= link_to 'Back', admin_units_path, class: 'btn btn-link' %>
+<%= link_to 'Edit', edit_admin_unit_path(@unit), class: 'button' %>
+<%= link_to 'Back', admin_units_path, class: 'link' %>
