--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/notice_banner' %>
 
-<h1>User</h1>
+<h1 class="heading-lg">User</h1>
 
 <dl class="dl-horizontal">
   <dt>Id:</dt>
@@ -38,4 +38,4 @@
 
 <hr>
 
-<%= link_to 'Back', admin_users_path, class: 'btn btn-link' %>
+<%= link_to 'Back', admin_users_path, class: 'link' %>
